# AIEngine

./: .gitignore  .graphify_ast.json  .graphify_chunk1.txt  .graphify_detect_script.py  .graphify_step3a.py  .graphify_step3c.py  .graphify_uncached.txt  AGENTS.md  AICore.sln  CMakeLists.txt  CMakePresets.json  README.md  arch_graph.drawio  arch_graph.json  基于NVIDIA GPU工控机的工业检测纯C++ AI引擎技术方案.md
aicore/: CMakeLists.txt  config_optimize.json  config_rois.json  config_train.json
aicore/cli/: model_optimizer_main.cpp  patchcore_infer_main.cpp  patchcore_train_main.cpp  roi_infer_main.cpp  roi_train_main.cpp  trainer_main.cpp
aicore/gui/: main.cpp  main_window.cpp  main_window.h  training_dialog.cpp  training_dialog.h
aicore/include/api/: aicore_api.h  scheduler_api.h
aicore/include/backend/: backend_factory.h
aicore/include/config/: config_parser.h  pipeline_builder.h
aicore/include/core/: allocator.h  cuda_mem.h  frame.h  model_backend.h  pipeline.h  processor.h  types.h
aicore/include/engine/: ai_engine.h  engine_pool.h  thread_pool.h
aicore/include/optimizer/: int8_calibrator.h  model_optimizer.h  onnx_exporter.h  optimizer_api.h  python_embedding.h  tensorrt_builder.h
aicore/include/patchcore/: anomaly_evaluator.h  backbone.h  backbone_libtorch.h  backbone_model.h  backbone_opencv.h  coreset_sampler.h  faiss_index.h  faiss_index_bridge.h  folder_dataset.h  memory_bank.h  memory_manager.h  multi_roi_node.h  patchcore_node.h  patchcore_trainer.h  patchcore_visualize.h  roi_def.h  roi_trainer.h  scheduler.h  tiered_memory_bank.h
aicore/include/pipeline/: composite_node.h  fusion_node.h  merge_node.h  model_node.h  pipeline_impl.h
aicore/include/postprocess/: nms_common.h  nms_node.h  yolo_decode_node.h
aicore/include/preprocess/: letterbox_node.h  normalize_node.h  resize_node.h
aicore/include/server/: inference_server.h  model_registry.h  server_api.h
aicore/include/trainer/: callback.h  trainer_api.h
aicore/include/trainer/data/: augmentation.h  data_loader.h  dataset.h  yolo_data.h
aicore/include/trainer/export/: model_exporter.h
aicore/include/trainer/model/: model_factory.h  python_trainer.h  yolo_loss.h  yolo_model.h
aicore/include/trainer/training/: checkpoint.h  early_stopping.h  training_loop.h  training_scheduler.h  yolo_trainer.h
aicore/include/trainer/validation/: validator.h
aicore/include/utils/: draw_utils.h
aicore/samples/: dgn.cpp
aicore/scripts/: export_onnx.py  export_patchcore_backbone.py  train_yolo.py
aicore/src/api/: aicore_api.cpp  scheduler_api.cpp
aicore/src/backend/: backend_factory.cpp  libtorch_backend.cpp  onnxruntime_backend.cpp  tensorrt_backend.cpp
aicore/src/config/: config_parser.cpp  pipeline_builder.cpp
aicore/src/engine/: ai_engine.cpp  engine_pool.cpp  thread_pool.cpp
aicore/src/optimizer/: int8_calibrator.cpp  model_optimizer.cpp  onnx_exporter.cpp  optimizer_api.cpp  python_embedding.cpp  tensorrt_builder.cpp
aicore/src/patchcore/: anomaly_evaluator.cpp  backbone.cpp  backbone_libtorch.cpp  backbone_model.cpp  backbone_opencv.cpp  coreset_sampler.cpp  faiss_index.cpp  faiss_index_bridge.cpp  folder_dataset.cpp  memory_bank.cpp  memory_manager.cpp  multi_roi_node.cpp  nn_search.cu  patchcore_node.cpp  patchcore_trainer.cpp  patchcore_visualize.cpp  roi_def.cpp  roi_trainer.cpp  scheduler.cpp  tiered_memory_bank.cpp
aicore/src/pipeline/: composite_node.cpp  fusion_node.cpp  merge_node.cpp  model_node.cpp  pipeline_impl.cpp
aicore/src/postprocess/: nms_common.cpp  nms_node.cpp  yolo_decode_node.cpp
aicore/src/preprocess/: letterbox_node.cpp  normalize_node.cpp  resize_node.cpp
aicore/src/server/: inference_server.cpp  model_registry.cpp  server_api.cpp
aicore/src/trainer/: trainer_api.cpp
aicore/src/trainer/data/: augmentation.cpp  data_loader.cpp  dataset.cpp  yolo_data.cpp
aicore/src/trainer/export/: model_exporter.cpp
aicore/src/trainer/model/: model_factory.cpp  python_trainer.cpp  yolo_loss.cpp  yolo_model.cpp
aicore/src/trainer/training/: checkpoint.cpp  early_stopping.cpp  training_loop.cpp  training_scheduler.cpp  yolo_trainer.cpp
aicore/src/trainer/validation/: validator.cpp
aicore/src/utils/: draw_utils.cpp
aicore/tests/: CMakeLists.txt  stubs_gpu.cpp  test_api.cpp  test_backbone.cpp  test_backend_factory.cpp  test_config_parser.cpp  test_faiss_index.cpp  test_fusion_node.cpp  test_inference_server.cpp  test_letterbox_node.cpp  test_model_registry.cpp  test_nms_node.cpp  test_optimizer.cpp  test_patchcore.cpp  test_pipeline.cpp  test_processor.cpp  test_roi.cpp  test_sanity.cpp  test_scheduler.cpp  test_thread_pool.cpp  test_tiered_memory.cpp  test_trainer.cpp  test_types.cpp  test_yolo_data.cpp  test_yolo_decode_node.cpp  test_yolo_loss.cpp  test_yolo_model.cpp  test_yolo_pipeline.cpp  test_yolo_trainer.cpp
config/: config_optimize.json  config_rois.json
docs/: code-reading-guide.md
docs/diagrams/: infer_sequence.drawio  train_sequence.drawio
docs/knowledge-graph/: README.md  aicore_architecture.dot  knowledge_graph.json
docs/superpowers/plans/: 2026-06-10-aicore-patchcore.md  2026-06-10-aicore-phase1-inference-engine.md  2026-06-10-aicore-phase2-optimizer.md  2026-06-10-aicore-phase3-trainer.md  2026-06-10-aicore-phase4-qt-ui.md
docs/superpowers/specs/: 2026-06-10-aicore-engine-design.md  2026-06-10-aicore-inference-server-design.md  2026-06-10-aicore-patchcore-design.md  2026-06-10-aicore-phase2-optimizer-design.md  2026-06-10-aicore-phase3-trainer-design.md  2026-06-10-aicore-phase4-qt-ui-design.md  2026-06-10-aicore-scheduler-design.md  2026-06-27-aicore-faiss-integration-design.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: copy-sln.ps1
